
<resources>
    <string name="app_name">CapmegaJava</string>
    <string name="primer_valor">Ingrese el primer valor</string>
    <string name="segundo_valor">Ingrese el segundo valor</string>
    <string name="bienvenidos">Bienvenidos a la siguiente aplicación de ejercicios</string>
    <string name="go_to_ejercicio1">Ejercicio 1 \n Uso de los diferentes programaciones del botón</string>
    <string name="enciso_a">a) Calcular</string>
    <string name="enciso_b">b) Calcular</string>
    <string name="enciso_c">c) Calcular</string>
    <string name="go_to_ejercicio2">Ejercicio 2\n Uso de RadioGroup y RadioButton</string>
    <string name="go_to_ejercicio3">Ejercicio 3\n Uso de CheckBox</string>
    <string name="go_to_ejercicio4">Ejercicio 4\n Uso de Spinner</string>
    <string name="go_to_ejercicio6">Ejercicio 6\n Uso de Array</string>
    <string name="go_to_ejercicio7">Ejercicio 7 y 8\n Uso de ArrayList en Log</string>
    <string name="descripcion">Selecciona la accion que deseas realizar </string>
    <string name="bienvenidos2">Bienvenidos a la siguiente aplicación de ejercicios: Ejercicio número 2.</string>
    <string name="bienvenidos3">Bienvenidos a la siguiente aplicación de ejercicios: Ejercicio número 3.</string>
    <string name="bienvenidos4">Bienvenidos a la siguiente aplicación de ejercicios: Ejercicio número 4.</string>
    <string name="bienvenidos5">Ejercicio número 5.</string>
    <string name="bienvenidos6">Ejercicio número 6.</string>
    <string name="bienvenidos7">Ejercicio número 7.</string>
    <string name="bienvenidos8">Ejercicio número 8.</string>
    <string name="resultado">El resultado es: </string>
    <string name="calcular">Calcular</string>
    <string name="strings">Boton de los Strings</string>
    <string name="enteros">Boton de los Ints</string>
    <string name="doubles">Boton de los Doubles</string>
    <string name="names">Boton de los nombres</string>
</resources>