<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
            android:id="@+id/txtv_presentation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/bienvenidos"
            android:textColor="@color/colorWhite"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/edt_first_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="number"
            android:gravity="center"
            android:hint="@string/primer_valor"
            app:layout_constraintTop_toBottomOf="@+id/txtv_presentation"
            tools:layout_editor_absoluteX="0dp" />

    <EditText
            android:id="@+id/adt_second_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:inputType="number"
            android:hint="@string/segundo_valor"
            app:layout_constraintTop_toBottomOf="@+id/edt_first_number"
            tools:layout_editor_absoluteX="-45dp" />

    <TextView
            android:id="@+id/txtv_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="463dp"
            android:gravity="center"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_calcular"
            tools:layout_editor_absoluteX="29dp" />
    <!-- <TextView
         android:id="@+id/txtv_resultado2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="25dp"
         android:gravity="center"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/txtv_resultado"
         tools:layout_editor_absoluteX="29dp" />-->

    <Button
            android:id="@+id/btn_calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:text="@string/apply"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/adt_second_number"
            tools:layout_editor_absoluteX="38dp" />

</android.support.constraint.ConstraintLayout>